extract filters. Set location in GUI fix, extracted filters popup and city extractor fix for den haag

--- a/recruit-gui/src/app/suggestions/searchbar/searchbar.component.html
+++ b/recruit-gui/src/app/suggestions/searchbar/searchbar.component.html
@@ -301,3 +301,73 @@
 	
 	</div> 
 </dialog>
+<!-- ExtractedFiltersModal -->
+<dialog #extractedFiltersModal>
+	<!--  Options -->
+	<div class="modal-header">
+		<h4 class="modal-title">{{'arenella-suggestions-extracted-filters' | translate}}</h4>
+		<div class="filter-close-box" (click)="extractedFiltersModal.close()">X</div>
+	</div>
+	<div class="modal-body">
+		<p>{{'arenella-suggestions-extracted-filters-intro' | translate}}</p>
+		<table class="ext-func-table">
+			<tr>
+				<th>{{'arenella-suggestions-job-title' | translate}}</th>
+				<td>{{extractedFilters.jobTitle}}</td>	
+			<tr>
+			<tr>
+				<th>{{'arenella-suggestions-contract' | translate}}</th>
+				<td>
+					<span *ngIf="extractedFilters.freelance == 'TRUE'" 	class="function-selectable function-selected-true">{{'arenella-suggestions-contract' | translate}}</span>
+					<span *ngIf="extractedFilters.perm 		== 'TRUE'" 	class="function-selectable function-selected-true">{{'arenella-suggestions-permanent' | translate}}</span>
+					<span *ngIf="extractedFilters.perm == 'FALSE' && extractedFilters.freelance == 'FALSE'" style="text-align:center;">-</span>
+				</td>	
+			<tr>
+			<tr>
+				<th>{{'arenella-suggestions-location-country' | translate}}</th>
+				<td *ngIf="extractedFilters.city != ''">
+					
+					<mat-icon >
+						<span class="flag-icon flag-icon-{{getIso2CodeByCountryName(extractedFilters.countries[0])}} flag-icon-med"></span>
+					</mat-icon>
+				</td>
+				<td *ngIf="extractedFilters.city == ''">
+					<mat-icon *ngFor="let country of extractedFilters.countries.slice(0,5)" title="country" style="margin-right:10px">
+						<span class="flag-icon flag-icon-{{getIso2CodeByCountryName(country)}} flag-icon-med" ></span>
+					</mat-icon>
+					<span *ngIf="extractedFilters.countries.length >= 6 " style="font-weight:bold">....</span>
+				</td>	
+			<tr>
+			<tr>
+				<th>{{'arenella-suggestions-location-city' | translate}}</th>
+				<td>{{extractedFilters.city}}</td>	
+			<tr>
+			<tr>
+				<th>{{'arenella-suggestions-language' | translate}}</th>
+				<td>
+					<span *ngFor="let language of extractedFilters.languages.slice(0,3)" class="function-selectable function-selected-true">{{language | translate}}</span>
+					<span *ngIf="extractedFilters.languages.length >= 4 " style="font-weight:bold">....</span>
+				</td>	
+			<tr>
+			<tr>
+				<th>{{'arenella-suggestions-experience' | translate}}</th>
+				<td>
+					<span *ngIf="extractedFilters.experienceGTE == '' && extractedFilters.experienceLTE != '' ">  &lt;= {{extractedFilters.experienceLTE}}</span>
+					<span *ngIf="extractedFilters.experienceGTE != '' && extractedFilters.experienceLTE == '' ">  &gt;= {{extractedFilters.experienceGTE}}</span>
+					<span *ngIf="extractedFilters.experienceGTE != '' && extractedFilters.experienceLTE != '' "> {{extractedFilters.experienceGTE}} - {{extractedFilters.experienceLTE}}</span>
+					
+				</td>	
+			<tr>
+			<tr>
+				<th>{{'arenella-suggestions-skills' | translate}}</th>
+				<td>
+					<span *ngFor="let skill of extractedFilters.skills.slice(0,3) " class="function-selectable function-selected-true">{{skill}}</span>
+					<span *ngIf="extractedFilters.skills.length >= 4 " style="font-weight:bold">....</span>
+				</td>
+				
+					
+			<tr>
+		</table>
+		
+	</div> 
+</dialog>
