--- a/recruit-gui/src/app/suggestions/searchbar/searchbar.component.css
+++ b/recruit-gui/src/app/suggestions/searchbar/searchbar.component.css
@@ -229,6 +229,50 @@ sugg-srch-hdr.sugg-srch-hdr{
 	cursor:pointer;
 }
 
+.ext-func-table{
+	text-align:left;
+	width:100%;
+	margin-left:5px;
+}
+.ext-func-table td{
+	padding:5px;
+	width:66%;
+	padding-left:20px;
+	background:#dee2e6;
+}
+
+.ext-func-table th{
+	padding:5px;
+	font-weight:bold;
+	border:right solid 2px black;
+	width:33%;
+	padding-left:20px;
+	color:white;
+	background:#6c757d;
+}
+
+.function-selectable{
+	float:left;
+	border-radius: 0.25rem;
+	margin:5px;
+	margin-left:0px;
+	background:#6a5acd;
+	color:white;
+	padding:5px;
+	max-width:100px;	
+	cursor:pointer;
+	text-align:center;
+}
+
+
+.function-selected-true{
+	opacity:1;
+}
+
+.function-selected-false{
+	opacity:0.25;
+}
+
 @media (max-width:700px)  {
 	.sugg-srch-ctry-chkbox{
 		display:inline-block;
