--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -103,7 +103,7 @@
 </dialog> 
 
 <!-- publicity -->
-<dialog #publicityModal>
+<dialog class="publicity-dialog" #publicityModal>
 
 	<!--  Options -->
 	<div class="modal-header">
@@ -111,11 +111,103 @@
 		<div class="filter-close-box" (click)="publicityModal.close()">X</div>
 	</div>
 	<div class="modal-body publicity-suggestions">
-		<table>
-			<div *ngFor="let c of publicitySuggestions">
+		
+		 <div class='suggestions-dialog-publicity-btns'>
+		 	<button class="btn btn-secondary arenella-btn" (click)="showPublicityBasic()">Basic</button>
+		 	<button class="btn btn-secondary arenella-btn not-available-mobile" (click)="showPublicityAdvanced()">Advanced</button>
+		 </div>
+		 
+		 <div *ngIf="publicityView != 'advanced'" styele="width:100%;">
+		 	<div style="margin: 0 auto; min-width:50%;max-width:600px;">
+		 		<div *ngFor="let c of publicitySuggestions" >
 				{{getCountryCode(c.country)}} - {{'arenella-suggestions-box-publicity-exp' | translate}}: {{c.yearsExperience}}  {{'arenella-suggestions-box-publicity-years' | translate}} -  {{c.roleSought}}
 			</div>
-		</table>
+			</div>
+		 </div>
+		 
+		<div *ngIf="publicityView == 'advanced'">
+			<h4>Applied filters</h4>
+			<table class="sugg-pub-advanced-table-filters">
+				<tr>
+					<th>Role</th>
+					<td>{{this.searchBar.extractedFilters.jobTitle}}</td>	
+					<th>{{'arenella-suggestions-contract' | translate}}</th>
+					<td>
+						<span *ngIf="this.searchBar.extractedFilters.freelance == 'TRUE'" 	class="function-selectable function-selected-true">{{'arenella-suggestions-contract' | translate}}</span>
+						<span *ngIf="this.searchBar.extractedFilters.perm 		== 'TRUE'" 	class="function-selectable function-selected-true">{{'arenella-suggestions-permanent' | translate}}</span>
+						<span *ngIf="this.searchBar.extractedFilters.perm == 'FALSE' && this.searchBar.extractedFilters.freelance == 'FALSE'" style="text-align:center;">-</span>
+					</td>	
+					<th>{{'arenella-suggestions-experience' | translate}}</th>
+					<td>
+						<span *ngIf="this.searchBar.extractedFilters.experienceGTE == '' && this.searchBar.extractedFilters.experienceLTE != '' ">  &lt;= {{this.searchBar.extractedFilters.experienceLTE}}</span>
+						<span *ngIf="this.searchBar.extractedFilters.experienceGTE != '' && this.searchBar.extractedFilters.experienceLTE == '' ">  &gt;= {{this.searchBar.extractedFilters.experienceGTE}}</span>
+						<span *ngIf="this.searchBar.extractedFilters.experienceGTE != '' && this.searchBar.extractedFilters.experienceLTE != '' "> {{this.searchBar.extractedFilters.experienceGTE}} - {{this.searchBar.extractedFilters.experienceLTE}}</span>
+					</td>	
+				</tr>
+				<tr>
+					<th>{{'arenella-suggestions-location-country' | translate}}</th>
+					<td *ngIf="this.searchBar.extractedFilters.city != ''">
+						<mat-icon >
+							<span class="flag-icon flag-icon-{{this.searchBar.getIso2CodeByCountryName(this.searchBar.extractedFilters.countries[0])}} flag-icon-med"></span>
+						</mat-icon>
+					</td>
+					
+					
+					<th *ngIf="this.searchBar.extractedFilters.city != ''">City</th>
+					<td *ngIf="this.searchBar.extractedFilters.city != ''">{{this.searchBar.extractedFilters.city}}</td>	
+					<th *ngIf="this.searchBar.extractedFilters.city != ''"></th>
+					<td *ngIf="this.searchBar.extractedFilters.city != ''"></td>
+					
+					<td *ngIf="this.searchBar.extractedFilters.city == ''"  colspan="6">
+						<mat-icon *ngFor="let country of this.searchBar.extractedFilters.countries.slice(0,5)" title="country" style="margin-right:10px">
+							<span class="flag-icon flag-icon-{{this.searchBar.getIso2CodeByCountryName(country)}} flag-icon-med" ></span>
+						</mat-icon>
+						<span *ngIf="this.searchBar.extractedFilters.countries.length >= 6 " style="font-weight:bold">+ {{this.searchBar.extractedFilters.countries.length - 6}}</span>
+					</td>	
+				</tr>
+				
+				<tr>
+					<th>{{'arenella-suggestions-language' | translate}}</th>
+					<td>
+						<span *ngFor="let language of this.searchBar.extractedFilters.languages.slice(0,8)" class="function-selectable function-selected-true">{{language | translate}}</span>
+						<span *ngIf="this.searchBar.extractedFilters.languages.length >= 8 " style="font-weight:bold">....</span>
+					</td>	
+				</tr>
+				<tr>
+					<th>{{'arenella-suggestions-skills' | translate}}</th>
+					<td>
+						<span *ngFor="let skill of this.searchBar.extractedFilters.skills.slice(0,3) " class="function-selectable function-selected-true">{{skill}}</span>
+						<span class="extra-option-count" *ngIf="this.searchBar.extractedFilters.skills.length >= 4 " style="font-weight:bold">+ {{this.searchBar.extractedFilters.skills.length - 4}}</span>
+					</td>
+					
+						
+				</tr>
+			</table> 
+			<h4>Best matches</h4>
+			<table class="sugg-pub-advanced-table">
+				<tr>
+					<th>id</th>
+					<th>Name</th>
+					<th>Role</th>
+					<th>Years Experience</th>
+					<th>Accuracy skills</th>
+					<th>Accuracy language</th>
+				</tr>
+				<tr *ngFor="let c of publicitySuggestions">
+					<td>{{c.candidateId}}</td>
+					<td>{{c.firstname}}</td>
+					<td>{{c.roleSought}}</td>
+					<td>{{c.yearsExperience}}</td>
+					<td style="border-bottom:1px solid black">
+						<div class="suggestion-perception-result-publicity suggestion-perception-result-{{c.accuracySkills}}"></div>
+					</td>
+					<td style="border-bottom:1px solid black">
+						<div class="suggestion-perception-result-publicity suggestion-perception-result-{{c.accuracyLanguages}}"></div>
+					</td>
+				</tr>
+			</table>
+		 </div>
+		 
 	</div> 
 </dialog>
 <!-- Paid subscription only -->
