--- a/recruit-gui/src/app/candidate-statistics/candidate-statistics.component.html
+++ b/recruit-gui/src/app/candidate-statistics/candidate-statistics.component.html
@@ -7,12 +7,13 @@
 		</div>
 		
 		<div class="page-body">
-		
+			
 			<!-- Action buttons -->
 			<div class="action-buttons">
 				<button class="btn btn-secondary arenella-btn" (click)="refreshStats()">{{'arenella-stats-btn-refresh' | translate}}</button>
 			</div>
 			<div>
+				<h3>{{'arenella-stats-current-week' | translate}}: {{todaysDate | date:'w'}}</h3>
 				<div class="stat-canvas">
 					<div class="statChartDiv">
 						<canvas  id="leftChart" >{{ leftChart }}</canvas>	
