--- a/recruit-gui/src/app/accounts/subscriptions/subscriptions.component.html
+++ b/recruit-gui/src/app/accounts/subscriptions/subscriptions.component.html
@@ -8,7 +8,7 @@
 			<p>{{getRecruitersWithSubscriptionActionsStatusCount(SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_AWAITING_ACTIVATION)}}</p>
 		</div>
 		<div class="account-subscription-panel subscriptions-awaiting-payment" (click)="selectSubscriptionStatus(SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_AWAITING_PAYMENT)">
-			<h1>Awaiting Payment</h1>
+			<h1>Subscription</h1>
 			<p>{{getRecruitersWithSubscriptionActionsStatusCount(SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_AWAITING_PAYMENT)}}</p>
 		</div>
 		<div class="account-subscription-panel subscriptions-invoice-sent" (click)="selectSubscriptionStatus(SUBSCRIPTION_VIEW.ACTIVE_INVOICE_SENT)">
