new subscription paths

--- a/recruit-gui/src/app/accounts/recruiters/recruiters.component.html
+++ b/recruit-gui/src/app/accounts/recruiters/recruiters.component.html
@@ -25,12 +25,14 @@
 			<thead>
 	      		<tr class="activityBreakdownRow">
       				<!-- Table Headers -->
+      				<th></th>
       				<th class="bg-tab-hdr">{{'arenella-accounts-tabcandidates-id' | translate}}</th>
       				<th class="bg-tab-hdr">{{'arenella-accounts-tabcandidates-name' | translate}}</th>
       				<th class="bg-tab-hdr">Activity {{getPercentActiveInactive()}}</th>
       		
       			</tr>
       			<tr *ngIf="showActivityBreakdown">
+      				<td></td>
       				<td></td>
       				<td></td>
       				<td style="padding:0px; margin:0px;margin-bottom:20px;">
@@ -80,8 +82,8 @@
 	      		<!-- Table row -->
 	      		<ng-container *ngFor="let recruiter of getSubscriptionRecruiters()" class="recruiter-active-subscription">
 	      			<tr  class="recruiter-active-subscription" (click)="toggleRecruiterDetails(recruiter.recruiter)">
+	      				<td style="width:20px"><span class="subscription{{recruiter.subscriptionStatus}}" style="padding-top:10px"></span></td>
 	      				<td *ngIf="showActivePaidSubscription" class="candidate-tab-col medicol">
-	      					<span class="subscription{{recruiter.subscriptionStatus}}"></span>
 	      					{{recruiter.recruiter.userId}}
 	      				</td>
 	            	    <td *ngIf="showActivePaidSubscription" class="candidate-tab-col medicol"> {{recruiter.recruiter.firstName}} {{recruiter.recruiter.surname}}</td>
@@ -120,8 +122,8 @@
       			</ng-container>
       			<ng-container *ngFor="let recruiter of getCreditBasedRecruiters()">
 	      			<tr  class="recruiter-credit-based-subscription" (click)="toggleRecruiterDetails(recruiter.recruiter)">
+	      				<td style="width:20px"><span class="subscription{{recruiter.subscriptionStatus}}"></span></td>
 	      				<td *ngIf="showCreditBasedSubscription" class="candidate-tab-col medicol"><span class="candidate-id-prefix">
-	      					<span class="subscription{{recruiter.subscriptionStatus}}"></span>
 	      					</span>{{recruiter.recruiter.userId}}
 	      				</td>
 	            	    <td *ngIf="showCreditBasedSubscription" class="candidate-tab-col medicol"> {{recruiter.recruiter.firstName}} {{recruiter.recruiter.surname}}</td>
