--- a/recruit-gui/src/app/accounts/subscriptions/subscriptions.component.css
+++ b/recruit-gui/src/app/accounts/subscriptions/subscriptions.component.css
@@ -10,13 +10,13 @@
 .account-subscription-status-panels{
 	margin:0 auto;	
 	margin-top:100px;
-	width:1350px;
+	max-width:1350px;
 	margin-bottom:20px;
 }
 
 .account-subscription-panel{
-	width:290px;
-	height:250px;
+	width:230px;
+	height:230px;
 	padding:50px;
 	text-align:center;	
 	cursor:pointer;
@@ -45,6 +45,11 @@
 .subscriptions-invoice-sent{
 	color:purple;
 }
+
+.subscriptions-invoice-unpaid{
+	color:brown;
+}
+
 
 .subscriptions-disabled{
 	color:red;
