--- a/recruit-gui/src/app/accounts/subscriptions/subscriptions.component.html
+++ b/recruit-gui/src/app/accounts/subscriptions/subscriptions.component.html
@@ -4,26 +4,30 @@
 	<div class="account-subscription-status-panels" *ngIf="currentView == SUBSCRIPTION_VIEW.SELECT_SUBSCRIPTION_STATUS">
 	
 		<div class="account-subscription-panel subscriptions-awaiting-activation" (click)="selectSubscriptionStatus(SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_AWAITING_ACTIVATION)">
-			<h1>Awaiting Activation</h1>
+			<h3>Awaiting Activation</h3>
 			<p>{{getRecruitersWithSubscriptionActionsStatusCount(SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_AWAITING_ACTIVATION)}}</p>
 		</div>
 		<div class="account-subscription-panel subscriptions-awaiting-payment" (click)="selectSubscriptionStatus(SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_AWAITING_PAYMENT)">
-			<h1>Subscription</h1>
+			<h3>New Purchase	</h3>
 			<p>{{getRecruitersWithSubscriptionActionsStatusCount(SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_AWAITING_PAYMENT)}}</p>
 		</div>
 		<div class="account-subscription-panel subscriptions-invoice-sent" (click)="selectSubscriptionStatus(SUBSCRIPTION_VIEW.ACTIVE_INVOICE_SENT)">
-			<h1>Invoice Sent</h1>
+			<h3>Invoice Sent</h3>
 			<p>{{getRecruitersWithSubscriptionActionsStatusCount(SUBSCRIPTION_VIEW.ACTIVE_INVOICE_SENT)}}</p>
 		</div>
+		<div class="account-subscription-panel subscriptions-invoice-unpaid" (click)="selectSubscriptionStatus(SUBSCRIPTION_VIEW.SUBSCRIPTION_INVOICE_UNPAID)">
+			<h3>Unpaid Invoices</h3>
+			<p>{{getRecruitersWithSubscriptionActionsStatusCount(SUBSCRIPTION_VIEW.SUBSCRIPTION_INVOICE_UNPAID)}}</p>
+		</div>
 		<div class="account-subscription-panel subscriptions-disabled" (click)="selectSubscriptionStatus(SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_DISABLED)">
-			<h1>Disabled</h1>
+			<h3>Disabled</h3>
 			<p>{{getRecruitersWithSubscriptionActionsStatusCount(SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_DISABLED)}}</p>
 		</div>	
 		
 	</div>
 	
 	<!-- Panel showing subscriptions of selected Status -->
-	<div *ngIf="currentView == SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_AWAITING_ACTIVATION || currentView == SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_AWAITING_PAYMENT || currentView == SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_DISABLED || currentView == SUBSCRIPTION_VIEW.ACTIVE_INVOICE_SENT">
+	<div *ngIf="currentView == SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_AWAITING_ACTIVATION || currentView == SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_AWAITING_PAYMENT || currentView == SUBSCRIPTION_VIEW.SUBSCRIPTION_STATUS_DISABLED || currentView == SUBSCRIPTION_VIEW.ACTIVE_INVOICE_SENT || currentView == SUBSCRIPTION_VIEW.SUBSCRIPTION_INVOICE_UNPAID">
 		<div class="action-buttons">
 			<button	class="btn btn-secondary arenella-btn" (click)="showStatusOptions()">Back</button>
 		</div>
