--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -1,11 +1,39 @@
+<div class="mobile-only-element mobile-header-bar">
+</div>
+<div class="mobile-only-element">
+	<span class="material-icons" style="width:100%;">
+		<a class="mobile-menu-bar-icon" style="text-decoration:none; cursor:pointer; color:#002549;float:left;" (click)="toggleMobileMenuOpt()">
+			menu
+		</a>
+		<a class="mobile-menu-bar-icon" style="text-decoration:none; cursor:pointer; color:#002549;float:right;" (click)="toggleMobileAuthMenuOpt()">
+			account_box
+		</a>
+	</span>
+	
+</div>
 <nav class="navbar navbar-expand-lg navbar-light bg-arenella-primary nav-primary arenella-primary-background arenella-primary-colour" id="page-top" style="scrollbar-gutter: stable;">
-  <h1 style="width:100%">Arenella ICT</h1>
-  <button *ngIf="isShowQuickActionButton()" class="btn btn-secondary main-btn no-quick-actions-for-mobile" style="float:right;width:200px;background:green;" (click)="openQuickActions()">Quick Actions</button>
+  <h1 class="main-app-header" style="width:100%;font-family:allessa">Arenella ICT</h1>
+  <button *ngIf="isShowQuickActionButton()" class="btn btn-secondary main-btn no-quick-actions-for-mobile quick-actions-btn" (click)="openQuickActions()">Quick Actions</button>
 </nav>
 
-<div>
+<div class="mobile-only-element {{toggleMobileAuthMenu}}">
+	<ul class="arenella-navbar arenella-secondary-background arenella-secondary-colour" (click)="resetMenu()">
+ 	
+ 		<li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
+           <a  class="dropdown-item dropdown-item-preauth" routerLink="/create-candidate">{{'arenella-app-menu-candidate-signup' | translate}}</a>
+        </li>
+        <li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
+           <a  class="dropdown-item dropdown-item-preauth" routerLink="/recruiter-signup">{{'arenella-app-menu-recruiter-signup' | translate}}</a>
+        </li>
+        <li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
+           <a  class="dropdown-item dropdown-item-preauth" routerLink="/suggestions">{{'arenella-app-menu-login' | translate}}</a>
+        </li>
+  	</ul>
+</div>
 
-	<ul class="arenella-navbar arenella-secondary-background arenella-secondary-colour">
+<div class="app-main-menu non-mobile-only-element {{toggleMobileMenu}}">
+
+	<ul class="arenella-navbar arenella-secondary-background arenella-secondary-colour" (click)="resetMenu()">
       
 		<!-- Pre Authentication -->
 		<li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
@@ -18,18 +46,21 @@
            <a  class="dropdown-item dropdown-item-preauth" routerLink="/faq">{{'arenella-app-menu-faq' | translate}}</a>
         </li>
         <li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
-           <a  class="dropdown-item dropdown-item-preauth" routerLink="/contact">{{'arenella-app-menu-contact' | translate}}</a>
+        	<a  class="dropdown-item dropdown-item-preauth" routerLink="/contact">{{'arenella-app-menu-contact' | translate}}</a>
         </li>
-		<li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
+        
+		<li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std non-mobile-only-element" *ngIf="!isAuthenticated()">
            <a  class="dropdown-item dropdown-item-preauth" routerLink="/suggestions">{{'arenella-app-menu-login' | translate}}</a>
         </li>
+        <!--  
          <li class="spacer-for-mobile-menu" *ngIf="!isAuthenticated()">
            	
- 	    </li> 
-        <li class="li-arenella-nav-pre-login li-arenella-nav-pre-signup signup-candidate arenella-fourth-background arenella-fourth-colour" *ngIf="!isAuthenticated()">
+ 	    </li>
+ 	    --> 
+        <li class="non-mobile-only-element li-arenella-nav-pre-login li-arenella-nav-pre-signup signup-candidate arenella-fourth-background arenella-fourth-colour" *ngIf="!isAuthenticated()">
            	<a class="dropdown-item dropdown-item-preauth" routerLink="/create-candidate">{{'arenella-app-menu-candidate-signup' | translate}}</a>
  	    </li>
-		<li class="li-arenella-nav-pre-login li-arenella-nav-pre-signup signup-recruiter arenella-fourth-background arenella-fourth-colour" *ngIf="!isAuthenticated()">
+		<li class="non-mobile-only-element li-arenella-nav-pre-login li-arenella-nav-pre-signup signup-recruiter arenella-fourth-background arenella-fourth-colour" *ngIf="!isAuthenticated()">
     		<a class="dropdown-item dropdown-item-preauth" routerLink="/recruiter-signup">{{'arenella-app-menu-recruiter-signup' | translate}}</a>
         </li>
 		
@@ -82,31 +113,37 @@
 
 <router-outlet></router-outlet>
 
-<div *ngIf="!termsAndConditionsAccepted" class="terms-and-conditions-box">
 
-	<div class="cookie-policy-hdr"><span class="cookie-policy-title">{{'arenella-app-cookies-and-privacy' | translate}}</span> <span class="cookie-policy-btn"><button (click)="acceptTandCs()">{{'arenella-app-accept-terms-and-conditions' | translate}}</button></span></div>
-	
-	<div class="cookie-policy-text">
-		<h5>{{'arenella-app-cookies-title1' | translate}}</h5>
-		<p>{{'arenella-app-cookies-text1' | translate}}</p>
-		<h5>{{'arenella-app-cookies-title2' | translate}}</h5>
-		<p>{{'arenella-app-cookies-text2' | translate}}</p>
-		<h5>{{'arenella-app-cookies-title3' | translate}}</h5>
-		<p>{{'arenella-app-cookies-text3' | translate}}</p>
-		<h5>{{'arenella-app-cookies-title4' | translate}}</h5>
-		<p>{{'arenella-app-cookies-text4' | translate}}</p>
-		<h5>{{'arenella-app-cookies-title5' | translate}}</h5>
-		<p>{{'arenella-app-cookies-text5-a' | translate}}</p>
-		<p>{{'arenella-app-cookies-text5-b' | translate}}</p>
-		<h5>{{'arenella-app-cookies-title6' | translate}}</h5>
-		<p>{{'arenella-app-cookies-text6' | translate}}</p>
-		<h5>{{'arenella-app-cookies-title7' | translate}}</h5>
-		<p>{{'arenella-app-cookies-text7' | translate}}</p>
-		<h5>{{'arenella-app-cookies-title8' | translate}}</h5>
-		<p>{{'arenella-app-cookies-text8' | translate}}</p>
-	</div>
-	
-</div>
+
+<dialog #tandcBox class="terms-and-conditions-box">
+
+		<div class="cookie-policy-hdr">
+			<div class="cookie-policy-title">{{'arenella-app-cookies-and-privacy' | translate}}</div> 
+		</div>
+		
+		<div class="cookie-policy-btn"><button (click)="acceptTandCs()">{{'arenella-app-accept-terms-and-conditions' | translate}}</button></div>
+		
+		<div class="cookie-policy-text">
+			<h5>{{'arenella-app-cookies-title1' | translate}}</h5>
+			<p>{{'arenella-app-cookies-text1' | translate}}</p>
+			<h5>{{'arenella-app-cookies-title2' | translate}}</h5>
+			<p>{{'arenella-app-cookies-text2' | translate}}</p>
+			<h5>{{'arenella-app-cookies-title3' | translate}}</h5>
+			<p>{{'arenella-app-cookies-text3' | translate}}</p>
+			<h5>{{'arenella-app-cookies-title4' | translate}}</h5>
+			<p>{{'arenella-app-cookies-text4' | translate}}</p>
+			<h5>{{'arenella-app-cookies-title5' | translate}}</h5>
+			<p>{{'arenella-app-cookies-text5-a' | translate}}</p>
+			<p>{{'arenella-app-cookies-text5-b' | translate}}</p>
+			<h5>{{'arenella-app-cookies-title6' | translate}}</h5>
+			<p>{{'arenella-app-cookies-text6' | translate}}</p>
+			<h5>{{'arenella-app-cookies-title7' | translate}}</h5>
+			<p>{{'arenella-app-cookies-text7' | translate}}</p>
+			<h5>{{'arenella-app-cookies-title8' | translate}}</h5>
+			<p>{{'arenella-app-cookies-text8' | translate}}</p>
+		</div>
+		
+</dialog>
 
 <!-- Reply Box -->
 <dialog #validationExBox>
