--- a/recruit-gui/src/app/listing/searchbar/searchbar.component.html
+++ b/recruit-gui/src/app/listing/searchbar/searchbar.component.html
@@ -3,10 +3,22 @@
 
 		<div >
 		  
-		  	<div>
+		  	<div class="non-mobile-only-element">
 				<table class="mobile-search-box search-filter-pane">
 					<tr>
 						<td class="sugg-srch-hdr">{{'arenella-suggestions-job-title' | translate}}</td>
+						<td class="sugg-srch-bdy">
+							<input type="text" class="sugg-srch-job-title" formControlName="searchPhrase">
+						</td>
+					</tr>
+				</table>
+			</div>
+			<div class="mobile-only-element">
+				<table class="mobile-search-box search-filter-pane">
+					<tr>
+						<td class="sugg-srch-hdr sugg-srch-hdr-search">{{'arenella-suggestions-job-title' | translate}}</td>
+					</tr>
+					<tr>
 						<td class="sugg-srch-bdy">
 							<input type="text" class="sugg-srch-job-title" formControlName="searchPhrase">
 						</td>
@@ -17,9 +29,8 @@
 			<span class="filters-collapse-options" *ngIf="filterView == 'expanded'" (click)=toggleFilters()>{{'hide-filters' | translate}}...</span>	
 			<span class="filters-collapse-options" *ngIf="filterView != 'expanded'" (click)=toggleFilters()>{{'show-filters' | translate}}...</span>
 			
-			<table class="mobile-search-box search-filter-pane" *ngIf="filterView == 'expanded'">
-				
-				<tr>
+			<table class="mobile-search-box search-filter-pane non-mobile-only-element" *ngIf="filterView == 'expanded'">
+			 	<tr>
 					<td class="sugg-srch-hdr">{{'arenella-suggestions-geoZones' | translate}}</td>
 					<td *ngIf="!showGeoZoneFilters">
 						<p class="toggle-filter-option" (click)="switchGeoZoneFilterView('showGeoZoneFilters')">{{'Show' | translate}}..</p>
@@ -71,6 +82,70 @@
 					</td>
 				</tr>		
 			</table>
+			
+			
+			<table class="mobile-search-box search-filter-pane mobile-only-element" *ngIf="filterView == 'expanded'">
+				
+				<tr>
+					<td class="sugg-srch-hdr">{{'arenella-suggestions-geoZones' | translate}}</td>
+					<td *ngIf="!showGeoZoneFilters">
+						<p class="toggle-filter-option" (click)="switchGeoZoneFilterView('showGeoZoneFilters')">{{'Show' | translate}}..</p>
+					</td>
+					<td *ngIf="showGeoZoneFilters">
+						<p class="toggle-filter-option" (click)="switchGeoZoneFilterView('')">{{'Hide' | translate}}..</p>
+					</td>
+				</tr>
+				<tr>
+					<td *ngIf="showGeoZoneFilters" class="sugg-srch-bdy geo-zone-filters" colspan="3">
+						<div *ngFor="let geoZone of geoZones" class="geo-code-filter geo-code-selected-{{includeResultsForGeoZone(geoZone)}}" (click)="toggleGeoZoneSelection(geoZone)">
+							{{geoZone.geoZoneId | translate}}
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="sugg-srch-hdr">{{'arenella-suggestions-country' | translate}}</td>
+					<td *ngIf="!showCountryFilters">
+						<p class="toggle-filter-option" (click)="switchCountriesFilterView('showCountryFilters')">{{'Show' | translate}}..</p>
+					</td>
+					<td *ngIf="showCountryFilters">
+						<p class="toggle-filter-option" (click)="switchCountriesFilterView('')">{{'Hide' | translate}}..</p>
+					</td>
+				</tr>
+				<tr>	
+					<td *ngIf="showCountryFilters" class="sugg-srch-bdy country-filters" colspan="2">
+						<div class="country-selections">
+							<span *ngFor="let supportedCountry of supportedCountries" class="country-filter country-selected-{{includeResultsForCountry(supportedCountry.name)}}" (click)="toggleCountrySelection(supportedCountry.name)">
+								<mat-icon title="{{supportedCountry.name}}">
+									<span class="flag-icon flag-icon-{{supportedCountry.iso2Code}} flag-icon-med"></span>
+								</mat-icon>
+							</span>
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="sugg-srch-hdr">{{'arenella-suggestions-contract' | translate}}</td>
+					<td class="sugg-srch-bdy">
+						<select class="contract-type" formControlName="contractType">
+							<option value="BOTH">{{'arenella-suggestions-both' | translate}}</option>
+							<option value="CONTRACT_ROLE">{{'arenella-suggestions-contract' | translate}}</option>
+							<option value="PERM_ROLE">{{'arenella-suggestions-permanent' | translate}}</option>
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td class="sugg-srch-hdr">{{'arenella-listing-contract-age' | translate}}</td>
+					<td class="sugg-srch-bdy">
+						<select class="contract-type" formControlName="maxAgeOfPost">
+							<option value="ALL">{{'arenella-listing-contract-all' | translate}}</option>
+							<option value="TODAY">{{'arenella-listing-contract-today' | translate}}</option>
+							<option value="THIS_WEEK">{{'arenella-listing-contract-week' | translate}}</option>
+							<option value="THIS_MONTH">{{'arenella-listing-contract-month' | translate}}</option>
+						</select>
+					</td>
+				</tr>		
+			</table>
+			
+			
 		</div>
 	</form>
 </div>
