--- a/recruit-gui/src/styles.css
+++ b/recruit-gui/src/styles.css
@@ -2,6 +2,17 @@
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 @import 'material-symbols';
 
+@media (min-width:701px)  {
+	
+	
+.mobile-only-element{
+	display:none;
+}	
+
+.non-mobile-only-element{
+	display:block;
+}
+
 .arenella-whole-width-page{
 	margin-top:20px;
 }
@@ -48,7 +59,7 @@ body{
 }
 
 .dropdown-item-preauth{
-	min-width:80px;
+	min-width:20px;
 }
 
 .nav-secondary{
@@ -239,9 +250,93 @@ textarea {
 	padding-top:0px;
 }
 
-
+}
 
 @media (max-width:700px)  {
+	
+	h5{
+		color:#002549;
+	}
+	
+	body{
+		font-family:veranda;
+	}
+	
+	.modal-header{
+		width:100%;
+		font-family:allessa;
+		text-align:center;
+		background:#002549;
+    	color:white;
+	}
+	
+	.modal-title{
+		width:100%;
+		font-family:allessa;
+		text-align:center;
+		background:#002549;
+    	color:white;
+	}
+	
+	select{
+		border-radius:3px;
+	}
+	
+	input{
+		border-radius:3px;
+		padding-left:5px;
+	}
+	
+	.arenella-btn{
+    	width: 165px;
+    	margin-right: 5px;
+    	margin-bottom: 0px;
+    	margin-top: 5px;
+    	border-radius:12px;
+    	background:#24629e;
+    	color:white;
+	}
+	
+	.arenella-btn:focus{
+    	width: 165px;
+    	margin-right: 5px;
+    	margin-bottom: 0px;
+    	margin-top: 5px;
+    	border-radius:12px;
+    	background:#24629e;
+    	color:white;
+	}
+	
+	.mobile-only-element{
+		display:block;
+	}
+	
+	.non-mobile-only-element{
+		display:none;
+	}
+	
+	.mobile-header-bar{
+		width:100%;
+		height:20px;
+		background:black;
+		text-decoration: none;
+	}
+	
+	.mobile-menu-bar{
+		width:100%;
+		background:white;
+		
+	}
+	
+	.mobile-menu-bar-icon{
+		color:#002549;
+		margin-left:10px;
+		padding:10px;
+		font-size:36px;
+		text-decoration: none;
+	}
+	
+	
 	dialog {
 		overflow: hidden;
 		padding:0px;
@@ -253,12 +348,6 @@ textarea {
 		width:96%;
 		margin: auto;
 		margin-top:10px;
-	}
-	.arenella-btn{
-	    width: 48%;
-	    margin-right: 1%;
-	    margin-bottom: 0px;
-	    margin-top: 5px;
 	}
 	
 	.right-body-pane{
